# live2d-assistant

./: .gitignore  LICENSE  Makefile  README.md  index.html  package-lock.json  package.json  requirements.txt  server.py  vite.config.ts
electron-live2d/: .npmrc  main.js  package-lock.json  package.json  preload.js
electron-live2d/scripts/: before-package.js  build.js  copy-www.js
live2d-assistant-fe/: README_RAG_LOCAL.md  package.json
live2d-assistant-server/: main.py  pyproject.toml  tools.py
live2d-assistant-server/live2d_server/: chat_response.py  client.py  configuration.py  openai_adapter.py  rag.py  router.py
live2d-assistant-server/live2d_server/agent/: agent.py  model.py  prebuild.py  single_agent.py  tools_loader.py
live2d-assistant-server/live2d_server/rag/: rag.py  router.py
live2d-assistant-server/live2d_server/search/: searx.py
py_script/: llm.py  requirements.txt  search.py  server.py  test.ipynb  test_search.py
scripts/: copy-assets.js
server/: Untitled-1.ipynb  agent.py  client.py  configuration.py  graph.md  mcp_tool_helper.py  model.py  openai_adapter.py  pyproject.toml  router.py  server.py  test.ipynb  tts.py
server/rag/: rag.py
server/search/: bing_search_engine.py  duckduckgo_search_engine.py  search_engine.py
server/src/: config.py  server.py  test.ipynb
server/src/llm_adapters/: __init__.py  chat_response.py  llm_adapter.py  ollama_adapter.py  openai_adapter.py
server/src/mcp/: client.py
server/src/search/: __init__.py  bing_search_engine.py  duckduckgo_search_engine.py  search_engine.py
src/: App.vue  main.ts
(+38 files in other folders)
