[project]
name = "live2d-assistant-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp>=1.3.0",
    "ollama>=0.4.7",
    "openai>=1.64.0",
    "python-dotenv>=1.0.1",
    "flask>=2.0.0",
    "flask-cors>=3.0.0",
    "requests>=2.26.0",
    "selenium>=4.0.0",
    "beautifulsoup4>=4.9.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "python-dotenv>=0.19.0",
    "langchain",
    "langchain-community",
]
